modifed html social element anchor

--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -26,9 +26,21 @@
 				<li class="nav_item" data-name='download'><a href="#">download</a></li>
 			</ul>
 			<ul class="social_list">
-				<li class="social_item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li class="social_item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-				<li class="social_item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+				<li class="social_item">
+					<a href="https://www.facebook.com" target="_blank">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+				</li>
+				<li class="social_item">
+					<a href="https://www.instagram.com" target="_blank">
+						<i class="fab fa-instagram"></i>
+					</a>
+				</li>
+				<li class="social_item">
+					<a href="https://www.twitter.com" target="_blank">
+						<i class="fab fa-twitter"></i>
+					</a>
+				</li>
 			</ul>
 			<span class="bar_menu"><i class="fas fa-bars"></i></span>
 		</nav>
@@ -263,17 +275,17 @@
 			</ul>
 			<ul class="social_list">
 				<li class="social_item">
-					<a href="https://www.facebook.com">
+					<a href="https://www.facebook.com" target="_blank">
 						<i class="fab fa-facebook-f"></i>
 					</a>
 				</li>
 				<li class="social_item">
-					<a href="https://www.instagram.com">
+					<a href="https://www.instagram.com" target="_blank">
 						<i class="fab fa-instagram"></i>
 					</a>
 				</li class="social_item">
 				<li>
-					<a href="https://www.twitter.com">
+					<a href="https://www.twitter.com" target="_blank">
 						<i class="fab fa-twitter"></i>
 					</a>
 				</li>
