--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -10,10 +10,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel='stylesheet' media='screen and (min-width: 1640px)' href='styles/min_1640.css' />
-	<!-- <link rel='stylesheet' media='screen and (min-width: 1024px) and (max-width: 1279px)' href='styles/min_1024.css' /> -->
-	<link rel='stylesheet' media='screen and (min-width: 980px) and (max-width: 1023px)' href='styles/min_980.css' />
-	<link rel='stylesheet' media='screen and (min-width: 640px) and (max-width: 979px) and (orientation: landscape)' href='styles/min_860.css' />
-	<link rel='stylesheet' media='screen and (min-width: 725px) and (max-width: 979px) and (orientation: portrait)' href='styles/min_' />
+	<link rel='stylesheet' media='screen and (min-width: 480px) and (max-width: 979px) and (orientation: landscape)' href='styles/min_l480.css' />
+	<link rel='stylesheet' media='screen and (min-width: 725px) and (max-width: 979px) and (orientation: portrait)' href='styles/min_p640.css' />
 	<link rel='stylesheet' media='screen and (max-width: 724px) and (orientation: portrait)' href='styles/max_640.css' />
 </head>
 <body>
@@ -300,7 +298,5 @@
 	</footer>
 	<script src="js/main.js"></script>
 	<script src="js/headroom.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<!--[if IE]> <script src="js/"></script> <![endif]-->
 </body>
 </html>
