--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -306,13 +306,13 @@
 			<span class="copyright">&copy; 2016 All rights reserved. Weather App Theme by Gravpix</span>
 		</div>
 	</footer>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
 		$(window).on("load", function(){
 			let $preloader = $(".preloader");
 			$preloader.delay(500).fadeOut("slow");
 		});
-	</script>
+	</script> -->
 	<script src="js/main.js"></script>
 	<script src="js/headroom.js"></script>
 </body>
