add X-button for close mob-menu

--- a/weatherapp_land/index.html
+++ b/weatherapp_land/index.html
@@ -29,6 +29,7 @@
 		<nav class="nav_header wrapper">
 			<span class="logo">Fun Weather.</span>
 			<ul class="nav_list">
+				<li class="close_mob_menu"><i class="fas fa-times"></i></li>
 				<li class="nav_item" data-name='home'><a class="active--item" href="#">Home</a></li>
 				<li class="nav_item" data-name='features'><a href="#">Features</a></li>
 				<li class="nav_item" data-name='reviews'><a href="#">Reviews</a></li>
