--- a/JS_FOR_TEST/index.html
+++ b/JS_FOR_TEST/index.html
@@ -3,8 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ReverseNumber</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<form action="">
+		<label for="input">Input a Number</label>
+		<input type="text" id="input">
+		<input type="button" value="Sort &amp; Reverse" class="initButton">
+		<label for="output">Output</label>
+		<input type="text" id="output">
+	</form>
 	<script src="reverseNumber.js"></script>
 </body>
 </html>
